--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@
                         <div class="elementor-social-icons-wrapper elementor-grid">
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-3c7e06f"
-                              href="https://t.me/bertonbsc" target="_blank">
+                              href="https://t.me/HornyOnETH" target="_blank">
                               <span class="elementor-screen-only">Telegram-plane</span>
                               <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1919,7 +1919,7 @@
                           </span>
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-d39aba7"
-                              href="https://x.com/BERTonBSC" target="_blank">
+                              href="https://x.com/HornyOnETH" target="_blank">
                               <span class="elementor-screen-only">X-twitter</span>
                               <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -2857,7 +2857,7 @@
                         <div class="elementor-social-icons-wrapper elementor-grid">
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-3c7e06f"
-                              href="https://t.me/bertonbsc" target="_blank">
+                              href="https://t.me/HornyOnETH" target="_blank">
                               <span class="elementor-screen-only">Telegram-plane</span>
                               <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -2869,7 +2869,7 @@
                           </span>
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-d39aba7"
-                              href="https://x.com/BERTonBSC" target="_blank">
+                              href="https://x.com/HornyOnETH" target="_blank">
                               <span class="elementor-screen-only">X-twitter</span>
                               <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512"
                                 xmlns="http://www.w3.org/2000/svg">
