--- a/index.html
+++ b/index.html
@@ -1972,7 +1972,7 @@
                               <li id="menu-item-154"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-154 nav-item elementskit-mobile-builder-content"
                                 data-vertical-menu="750px">
-                                <a href="https://dextools.io/app/en/ether/pair-explorer/0xTBA"
+                                <a href="https://dextools.io/app/en/ether/pair-explorer/0x53f5ff3aacd044d1634270f0c49141e750c1bb2b"
                                   class="ekit-menu-nav-link">Live Chart</a>
                               </li>
                             </ul>
@@ -2005,7 +2005,7 @@
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
                           <a class="elementor-button elementor-button-link elementor-size-sm"
-                            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xTBA">
+                            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
                             <span class="elementor-button-content-wrapper">
                               <span class="elementor-button-text">BUY NOW</span>
                             </span>
@@ -2091,7 +2091,7 @@
                               <div class="elementor-widget-container">
                                 <div class="elementor-button-wrapper">
                                   <a class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xTBA">
+                                    href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
                                     <span class="elementor-button-content-wrapper">
                                       <span class="elementor-button-text">BUY NOW</span>
                                     </span>
@@ -2111,7 +2111,7 @@
                               <div class="elementor-widget-container">
                                 <div class="elementor-button-wrapper">
                                   <a class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://dextools.io/app/en/ether/pair-explorer/0xTBA">
+                                    href="https://dextools.io/app/en/ether/pair-explorer/0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
                                     <span class="elementor-button-content-wrapper">
                                       <span class="elementor-button-text">LIVE CHART</span>
                                     </span>
@@ -2663,11 +2663,11 @@
                           top: 0px;
                           left: 0px;
                         ">
-                      <input class="click-to-copy__input" value="0xTBA" />
+                      <input class="click-to-copy__input" value="0x53f5ff3aacd044d1634270f0c49141e750c1bb2b" />
                     </div>
 
                     <span class="click-to-copy__text"><span class="ue-icon"><i class="fas fa-copy"></i></span>
-                      0xTBA</span>
+                      0x53f5ff3aacd044d1634270f0c49141e750c1bb2b</span>
                     <span class="copy_succes" style="color: #ffffff">
                       Copied!
                     </span>
