--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@
                         <div class="elementor-social-icons-wrapper elementor-grid">
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-3c7e06f"
-                              href="https://t.me/HornyOnETH" target="_blank">
+                              href="https://t.me/HornyMattETH" target="_blank">
                               <span class="elementor-screen-only">Telegram-plane</span>
                               <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1919,7 +1919,7 @@
                           </span>
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-d39aba7"
-                              href="https://x.com/HornyOnETH" target="_blank">
+                              href="https://x.com/HornyMattETH" target="_blank">
                               <span class="elementor-screen-only">X-twitter</span>
                               <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1972,7 +1972,7 @@
                               <li id="menu-item-154"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-154 nav-item elementskit-mobile-builder-content"
                                 data-vertical-menu="750px">
-                                <a href="https://dextools.io/app/en/ether/pair-explorer/0x53f5ff3aacd044d1634270f0c49141e750c1bb2b"
+                                <a href="https://dextools.io/app/en/ether/pair-explorer/0xTBA"
                                   class="ekit-menu-nav-link">Live Chart</a>
                               </li>
                             </ul>
@@ -2005,7 +2005,7 @@
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
                           <a class="elementor-button elementor-button-link elementor-size-sm"
-                            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
+                            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xTBA">
                             <span class="elementor-button-content-wrapper">
                               <span class="elementor-button-text">BUY NOW</span>
                             </span>
@@ -2091,7 +2091,7 @@
                               <div class="elementor-widget-container">
                                 <div class="elementor-button-wrapper">
                                   <a class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
+                                    href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xTBA">
                                     <span class="elementor-button-content-wrapper">
                                       <span class="elementor-button-text">BUY NOW</span>
                                     </span>
@@ -2111,7 +2111,7 @@
                               <div class="elementor-widget-container">
                                 <div class="elementor-button-wrapper">
                                   <a class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://dextools.io/app/en/ether/pair-explorer/0x53f5ff3aacd044d1634270f0c49141e750c1bb2b">
+                                    href="https://dextools.io/app/en/ether/pair-explorer/0xTBA">
                                     <span class="elementor-button-content-wrapper">
                                       <span class="elementor-button-text">LIVE CHART</span>
                                     </span>
@@ -2663,11 +2663,11 @@
                           top: 0px;
                           left: 0px;
                         ">
-                      <input class="click-to-copy__input" value="0x53f5ff3aacd044d1634270f0c49141e750c1bb2b" />
+                      <input class="click-to-copy__input" value="0xTBA" />
                     </div>
 
                     <span class="click-to-copy__text"><span class="ue-icon"><i class="fas fa-copy"></i></span>
-                      0x53f5ff3aacd044d1634270f0c49141e750c1bb2b</span>
+                      0xTBA</span>
                     <span class="copy_succes" style="color: #ffffff">
                       Copied!
                     </span>
@@ -2857,7 +2857,7 @@
                         <div class="elementor-social-icons-wrapper elementor-grid">
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-3c7e06f"
-                              href="https://t.me/HornyOnETH" target="_blank">
+                              href="https://t.me/HornyMattETH" target="_blank">
                               <span class="elementor-screen-only">Telegram-plane</span>
                               <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -2869,7 +2869,7 @@
                           </span>
                           <span class="elementor-grid-item">
                             <a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-d39aba7"
-                              href="https://x.com/HornyOnETH" target="_blank">
+                              href="https://x.com/HornyMattETH" target="_blank">
                               <span class="elementor-screen-only">X-twitter</span>
                               <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512"
                                 xmlns="http://www.w3.org/2000/svg">
